CSS Alignment fix, Sub-category data pull

--- a/css/custom.css
+++ b/css/custom.css
@@ -24,7 +24,7 @@
 
 .chartBox {
   padding: 10px;
-  margin-left: 0px;
+  /*margin-left: 0px;*/
   text-align: center;
   border: 1px solid grey;
 }
